tests/parse-fail/bad_generic_args.fl.0.exp
Error: bad_generic_args.fl(3,24): Expected closing bracket, but got ';' 
pub mod bad_generic_args {
    pub struct BadGenericArgs {
        pub a : foo[bar;
                       ^ 
    }
}
