tests/parse-fail/bad_generic_args.fl
pub mod bad_generic_args {
    pub struct BadGenericArgs {
        pub a : foo[bar;
    }
}
